--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
 </div>
 
 <div id="tophalfcontainer">
-    
+
+</div>
+
+<div id="bottomhalfcontainer">
+
 </div>
 
 
 
-<p>test7</p>
+<p>test8</p>
 
 
 
