Adding world map and json file

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 </div>
 
 <div id="bottomhalfcontainer">
-
+<div id="mapcontainer"></div>
 </div>
 
 
 
 <p>test12</p>
 
-
+<script src="map.js"></script>
 
 
 
