Adding previous/next buttons and functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 <div id="bottomhalfcontainer">
 <div id="mapcontainer"></div>
+<button type = "button" id="prevbut" onclick="changesilverstone()">Previous</button>
+<button type = "button" id="nextbut" onclick="changesilverstone()">Next</button>
 </div>
 
 
