--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <div id="bottomhalfcontainer">
 <div id="mapcontainer"></div>
-<button type = "button" id="prevbut" onclick="changesilverstone()">Previous</button>
-<button type = "button" id="nextbut" onclick="changesilverstone()">Next</button>
+<button type = "button" id="prevbut" onclick="prevcircuit()">Previous</button>
+<button type = "button" id="nextbut" onclick="nextcircuit()">Next</button>
 </div>
 
 
