Setting up containers for data viz

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
     <p class="bannertext">Formula 1 2021 Season</p>
 </div>
 
-<div id="tophalfcontainer">
 
+<div id="tophalfcontainer">
+<div id="infobox"></div>
+<div id="driverpos"></div>
+<div id="wdcwcc"></div>
 </div>
+
 
 <div id="bottomhalfcontainer">
 <div id="mapcontainer"></div>
@@ -34,7 +38,7 @@
 
 
 
-<p>test12</p>
+<p>test13</p>
 
 <script src="map.js"></script>
 
