Lots of changes
Testing racegraph axes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
 
 <p>test16</p>
 
+
 <script src="map.js"></script>
+<script src="racepositiongraph.js"></script>
 <script src="racepositions.js"></script>
+
 
 
 
