Adding tooltips + driver data

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>test18</p>
 
-
+<script src="drivers.js"></script>
 <script src="map.js"></script>
 <script src="racepositiongraph.js"></script>
 <script src="racepositions.js"></script>
