--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 
 
 <div id="tophalfcontainer">
-<div id="infobox"></div>
+<div id="infobox">
+	<form method="post" action="/Tests/Post">  
+		<fieldset>  
+		<legend>Choose Teams to Display</legend>  
+		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes<br>  
+		
+		</fieldset>  
+	</form>  
+
+</div>
 <div id="driverpos"></div>
 <div id="wdcwcc"></div>
 </div>
