adding all teams

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<form method="post" action="/Tests/Post">  
 		<fieldset>  
 		<legend>Choose Teams to Display</legend>  
+		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
 		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes<br>  
 		
 		</fieldset>  
