Adding all checkboxes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
 		<fieldset>  
 		<legend>Choose Teams to Display</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
-		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes<br>  
-		
+		<input type="checkbox" id = "merccheck" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes<br>  
+		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull<br>  
+		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari<br>  
+		<input type="checkbox" name="mclaren" value="mclaren" onclick="return McLarenCheck();">McLaren<br>  
+		<input type="checkbox" name="alpine" value="alpine" onclick="return AlpineCheck();">Alpine<br>  
+		<input type="checkbox" name="alphatauri" value="alphatauri" onclick="return AlphaTauriCheck();">Alpha Tauri<br>  
+		<input type="checkbox" name="alfaromeo" value="alfaromeo" onclick="return AlfaRomeoCheck();">Alfa Romeo<br>  
+		<input type="checkbox" name="williams" value="williams" onclick="return WilliamsCheck();">Williams<br>  
+		<input type="checkbox" name="haas" value="haas" onclick="return HaasCheck();">Haas<br>  
+		<input type="checkbox" name="astonmartin" value="astonmartin" onclick="return AstonMartinCheck();">Aston Martin<br>  
+
 		</fieldset>  
 	</form>  
 
