--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<fieldset>  
 		<legend>Choose Teams to Display</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
-		<input type="checkbox" id = "merccheck" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes<br>  
+		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes <div class="box mercbox"></div><br>  
 		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull<br>  
 		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari<br>  
 		<input type="checkbox" name="mclaren" value="mclaren" onclick="return McLarenCheck();">McLaren<br>  
