--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div id="tophalfcontainer">
 <div id="infobox">
-	<form method="post" action="/Tests/Post">  
+	<form >  
 		<fieldset>  
 		<legend>Choose Teams to Display</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
