--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 		<legend>Choose Teams to Display</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
 		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes <div class="box mercbox"></div><br>  
-		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull<br>  
-		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari<br>  
-		<input type="checkbox" name="mclaren" value="mclaren" onclick="return McLarenCheck();">McLaren<br>  
-		<input type="checkbox" name="alpine" value="alpine" onclick="return AlpineCheck();">Alpine<br>  
-		<input type="checkbox" name="alphatauri" value="alphatauri" onclick="return AlphaTauriCheck();">Alpha Tauri<br>  
-		<input type="checkbox" name="alfaromeo" value="alfaromeo" onclick="return AlfaRomeoCheck();">Alfa Romeo<br>  
-		<input type="checkbox" name="williams" value="williams" onclick="return WilliamsCheck();">Williams<br>  
-		<input type="checkbox" name="haas" value="haas" onclick="return HaasCheck();">Haas<br>  
-		<input type="checkbox" name="astonmartin" value="astonmartin" onclick="return AstonMartinCheck();">Aston Martin<br>  
+		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull <div class="box redbullbox"></div><br>  
+		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari <div class="box ferraribox"></div><br>  
+		<input type="checkbox" name="mclaren" value="mclaren" onclick="return McLarenCheck();">McLaren <div class="box mclarenbox"></div><br>  
+		<input type="checkbox" name="alpine" value="alpine" onclick="return AlpineCheck();">Alpine <div class="box alpinebox"></div><br>  
+		<input type="checkbox" name="alphatauri" value="alphatauri" onclick="return AlphaTauriCheck();">Alpha Tauri <div class="box alphatauribox"></div><br>  
+		<input type="checkbox" name="alfaromeo" value="alfaromeo" onclick="return AlfaRomeoCheck();">Alfa Romeo <div class="box alfaromeobox"></div><br>  
+		<input type="checkbox" name="williams" value="williams" onclick="return WilliamsCheck();">Williams <div class="box williamsbox"></div><br>  
+		<input type="checkbox" name="haas" value="haas" onclick="return HaasCheck();">Haas <div class="box haasbox"></div><br>  
+		<input type="checkbox" name="astonmartin" value="astonmartin" onclick="return AstonMartinCheck();">Aston Martin <div class="box astonmartinbox"></div><br>  
 
 		</fieldset>  
 	</form>  
