--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="infobox">
 	<form>  
 		<fieldset>  
-		<legend>Choose Teams to Display</legend>  
+		<legend>Choose Teams to Hide</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
 		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes <div class="box mercbox"></div><br>  
 		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull <div class="box redbullbox"></div><br>  
