--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <script src="map.js"></script>
 <script src="racepositiongraph.js"></script>
 <script src="racepositions.js"></script>
-
+<script src="constructorschart.js"></script>
 
 
 
