--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <div id="banner">
-    <p class="bannertext">Formula 1 2021 Season</p>
+    <p class="bannertext">Formula 1 2021 Season - Round 1 - Bahrain International Circuit </p>
 </div>
 
 
