--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div id="tophalfcontainer">
 <div id="infobox">
-	<form>  
+	<form id="formbox">  
 		<fieldset>  
 		<legend>Choose Teams to Hide</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
