--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
  <head>
 		
-    		<meta charset="utf-8">
+    		<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
 		
 		<script src="//d3js.org/d3.v7.min.js" charset="utf-8"></script>
 		<script src="//d3js.org/topojson.v1.min.js"></script>
