--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<form id="formbox">  
 		<fieldset>  
 		<legend>Choose Teams to Hide</legend>  
-		<input type="checkbox" name="allteams" value="allteams" onclick="return AllTeamsCheck();">All Teams<br> 
+		<input type="checkbox" name="allteams" value="allteams" onclick= AllTeamsCheck();>All Teams<br> 
 		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes <div class="box mercbox"></div><br>  
 		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull <div class="box redbullbox"></div><br>  
 		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari <div class="box ferraribox"></div><br>  
