--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 		<fieldset>  
 		<legend>Choose Teams to Hide</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick= AllTeamsCheck();>All Teams<br> 
-		<input type="checkbox" name="mercedes" value="mercedes" onclick="return MercCheck();">Mercedes <div class="box mercbox"></div><br>  
-		<input type="checkbox" name="redbull" value="redbull" onclick="return RedBullCheck();">Red Bull <div class="box redbullbox"></div><br>  
-		<input type="checkbox" name="ferrari" value="ferrari" onclick="return FerrariCheck();">Ferrari <div class="box ferraribox"></div><br>  
-		<input type="checkbox" name="mclaren" value="mclaren" onclick="return McLarenCheck();">McLaren <div class="box mclarenbox"></div><br>  
-		<input type="checkbox" name="alpine" value="alpine" onclick="return AlpineCheck();">Alpine <div class="box alpinebox"></div><br>  
-		<input type="checkbox" name="alphatauri" value="alphatauri" onclick="return AlphaTauriCheck();">Alpha Tauri <div class="box alphatauribox"></div><br>  
-		<input type="checkbox" name="alfaromeo" value="alfaromeo" onclick="return AlfaRomeoCheck();">Alfa Romeo <div class="box alfaromeobox"></div><br>  
-		<input type="checkbox" name="williams" value="williams" onclick="return WilliamsCheck();">Williams <div class="box williamsbox"></div><br>  
-		<input type="checkbox" name="haas" value="haas" onclick="return HaasCheck();">Haas <div class="box haasbox"></div><br>  
-		<input type="checkbox" name="astonmartin" value="astonmartin" onclick="return AstonMartinCheck();">Aston Martin <div class="box astonmartinbox"></div><br>  
+		<input type="checkbox" name="mercedes" value="mercedes" onclick=MercCheck();>Mercedes <div class="box mercbox"></div><br>  
+		<input type="checkbox" name="redbull" value="redbull" onclick= RedBullCheck();>Red Bull <div class="box redbullbox"></div><br>  
+		<input type="checkbox" name="ferrari" value="ferrari" onclick= FerrariCheck();>Ferrari <div class="box ferraribox"></div><br>  
+		<input type="checkbox" name="mclaren" value="mclaren" onclick= McLarenCheck();>McLaren <div class="box mclarenbox"></div><br>  
+		<input type="checkbox" name="alpine" value="alpine" onclick= AlpineCheck();>Alpine <div class="box alpinebox"></div><br>  
+		<input type="checkbox" name="alphatauri" value="alphatauri" onclick= AlphaTauriCheck();>Alpha Tauri <div class="box alphatauribox"></div><br>  
+		<input type="checkbox" name="alfaromeo" value="alfaromeo" onclick= AlfaRomeoCheck();>Alfa Romeo <div class="box alfaromeobox"></div><br>  
+		<input type="checkbox" name="williams" value="williams" onclick= WilliamsCheck();>Williams <div class="box williamsbox"></div><br>  
+		<input type="checkbox" name="haas" value="haas" onclick= HaasCheck();>Haas <div class="box haasbox"></div><br>  
+		<input type="checkbox" name="astonmartin" value="astonmartin" onclick= AstonMartinCheck();>Aston Martin <div class="box astonmartinbox"></div><br>  
 
 		</fieldset>  
 	</form>  
