--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<fieldset>  
 		<legend>Choose Teams to Hide</legend>  
 		<input type="checkbox" name="allteams" value="allteams" onclick= AllTeamsCheck();>All Teams<br> 
-		<input type="checkbox" name="mercedes" value="mercedes" onclick=TeamCheck();>Mercedes <div class="box mercbox"></div><br>  
-		<input type="checkbox" name="redbull" value="redbull" onclick= TeamCheck();>Red Bull <div class="box redbullbox"></div><br>  
+		<input type="checkbox" name="mercedes" value="mercedes" onclick= MercCheck();>Mercedes <div class="box mercbox"></div><br>  
+		<input type="checkbox" name="redbull" value="redbull" onclick= RedBullCheck();>Red Bull <div class="box redbullbox"></div><br>  
 		<input type="checkbox" name="ferrari" value="ferrari" onclick= FerrariCheck();>Ferrari <div class="box ferraribox"></div><br>  
 		<input type="checkbox" name="mclaren" value="mclaren" onclick= McLarenCheck();>McLaren <div class="box mclarenbox"></div><br>  
 		<input type="checkbox" name="alpine" value="alpine" onclick= AlpineCheck();>Alpine <div class="box alpinebox"></div><br>  
